# labas1

./: CMakeLists.txt  hw2.1(2).c  hw2.1.cpp  hw2.2(2).c  hw2.2.cpp  hw2.3(2).c  hw3.1(2).hpp  hw3.1.cpp  hw3.2.cpp  laba4(2).c  laba4.cpp  laba5(2).c  laba5.cpp  laba6(2).c  laba6.cpp  laba7(2).cpp  laba7.cpp  laba8(2)(2).cpp  laba8.cpp  laba9.cpp
