cmake_minimum_required(VERSION 3.23)
project(labas)

set(CMAKE_CXX_STANDARD 14)

add_executable(laba8.cpp laba5.cpp hw2.2.cpp laba7.cpp laba6.cpp cmake-build-debug/hw2.3.cpp hw2.1.cpp laba4.cpp hw3.2.cpp "cmake-build-debug/laba8(2).cpp" "laba7(2).cpp" hw3.1.cpp hw3.1.hpp laba9.cpp "laba8(2)(2).cpp" "hw2.1(2).c" "hw2.2(2).c" "hw2.3(2).c" "laba4(2).c" "laba5(2).c" "laba6(2).c" "hw3.1(2).hpp")
